--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,23 @@
+astroid==2.2.5
 certifi==2019.3.9
 chardet==3.0.4
+future==0.17.1
 idna==2.8
+isort==4.3.18
+jedi==0.13.3
+lazy-object-proxy==1.4.0
+mccabe==0.6.1
 numpy==1.16.3
 pandas==0.24.2
+parso==0.4.0
+pluggy==0.9.0
+pylint==2.3.1
 python-dateutil==2.8.0
+python-jsonrpc-server==0.1.2
+python-language-server==0.26.1
 pytz==2019.1
 requests==2.21.0
 six==1.12.0
+typed-ast==1.3.5
 urllib3==1.24.3
+wrapt==1.11.1
